# pkg/generated/goserver/model_items_list_response.go
@@ -1,0 +1,63 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Diary - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+type ItemsListResponse struct {
+
+	// List of diary items matching the search criteria
+	Items []ItemsResponse `json:"items"`
+
+	// Total number of items found
+	TotalCount int32 `json:"totalCount"`
+}
+
+type ItemsListResponseInterface interface {
+	GetItems() []ItemsResponse
+	GetTotalCount() int32
+}
+
+func (c *ItemsListResponse) GetItems() []ItemsResponse {
+	return c.Items
+}
+func (c *ItemsListResponse) GetTotalCount() int32 {
+	return c.TotalCount
+}
+
+// AssertItemsListResponseRequired checks if the required fields are not zero-ed
+func AssertItemsListResponseRequired(obj ItemsListResponse) error {
+	elements := map[string]interface{}{
+		"items":      obj.Items,
+		"totalCount": obj.TotalCount,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Items {
+		if err := AssertItemsResponseRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertItemsListResponseConstraints checks if the values respects the defined constraints
+func AssertItemsListResponseConstraints(obj ItemsListResponse) error {
+	for _, el := range obj.Items {
+		if err := AssertItemsResponseConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
